Closed Bug 1529271 Opened 5 years ago Closed 5 years ago

StructuredSpewer doesn't handle output file initialization failure

Categories

(Core :: JavaScript Engine, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox67 --- fixed

People

(Reporter: mgaudet, Assigned: mgaudet)

Details

Attachments

(1 file)

The StructuredSpewer code currently doesn't correctly handle the case where an output file fails to open;

The calls to StructuredSpewer::ensureInitalizationAttempted() presume that after the call is made the output is definitely available.

This is not necessarily the case, especially in the face of the sandbox.

In my experience, the symptom of this is a tab crash that goes away when run with the sandbox disabled: ./mach run --setpref security.sandbox.content.level=0

Severity: normal → minor
Priority: -- → P3
Assignee: nobody → mgaudet
Status: NEW → ASSIGNED
Pushed by mgaudet@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a275885fca55
Structured Spewer: Correct handling of output initialization failure r=iain
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: