Bug 1529271 - Structured Spewer: Correct handling of output initialization failure r=iain

Differential Revision: https://phabricator.services.mozilla.com/D20574